api_versioned_docs/version-12.0.5/avalonia/controls/index.mdx
---
title: 'Avalonia.Controls'
hide_title: true
slug: '/avalonia/controls'
uid: 'Avalonia.Controls'
commentId: 'N:Avalonia.Controls'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net10.0'
  - 'net10.0-browser1.0'
  - 'net10.0-ios26.0'
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Controls Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls`

</div>

## Types

- [AcrylicPlatformCompensationLevels](acrylicplatformcompensationlevels.mdx) - Defines compensation levels for the platform depending on the transparency level.
It controls the base opacity level of the 'tracing paper' layer that compensates
for low blur radius.
- [AlphaComponentPosition](alphacomponentposition.mdx) - Defines the position of a color's alpha component relative to all other components.
- [AutoCompleteBox](autocompletebox.mdx) - Represents a control that provides a text box for user input and a
drop-down that contains possible matches based on the input in the text
box.
- [AutoCompleteFilterMode](autocompletefiltermode.mdx) - Specifies how text in the text box portion of the [Avalonia.Controls.AutoCompleteBox](xref:Avalonia.Controls.AutoCompleteBox)
control is used to filter items specified by the [Avalonia.Controls.AutoCompleteBox.ItemsSource](xref:Avalonia.Controls.AutoCompleteBox.ItemsSource)
property for display in the drop-down.
- [AutoCompleteFilterPredicate&lt;T&gt;](autocompletefilterpredicate-1.mdx) - Represents the filter used by the
[Avalonia.Controls.AutoCompleteBox](xref:Avalonia.Controls.AutoCompleteBox) control to
determine whether an item is a possible match for the specified text.
- [AutoCompleteSelector&lt;T&gt;](autocompleteselector-1.mdx) - Represents the selector used by the
[Avalonia.Controls.AutoCompleteBox](xref:Avalonia.Controls.AutoCompleteBox) control to
determine how the specified text should be modified with an item.
- [BarLayoutBehavior](barlayoutbehavior.mdx) - Controls how the navigation bar interacts with the page content area.
- [BeginEditGestures](begineditgestures.mdx) - Defines the gestures that can be used to begin editing a cell.
- [Border](border.mdx) - A control which decorates a child with a border and background.
- [Button](button.mdx) - A standard button control.
- [ButtonSpinner](buttonspinner.mdx) - Represents a spinner control that includes two Buttons.
- [Calendar](calendar.mdx) - Represents a control that enables a user to select a date by using a
visual calendar display.
- [CalendarDateChangedEventArgs](calendardatechangedeventargs.mdx) - Provides data for the
[Avalonia.Controls.Calendar.DisplayDateChanged](xref:Avalonia.Controls.Calendar.DisplayDateChanged)
event.
- [CalendarDatePicker](calendardatepicker.mdx) - A date selection control that allows the user to select dates from a drop down calendar.
- [CalendarDatePickerDateValidationErrorEventArgs](calendardatepickerdatevalidationerroreventargs.mdx) - Provides data for the
[Avalonia.Controls.CalendarDatePicker.DateValidationError](xref:Avalonia.Controls.CalendarDatePicker.DateValidationError)
event.
- [CalendarDatePickerFormat](calendardatepickerformat.mdx) - Specifies date formats for a
[Avalonia.Controls.CalendarDatePicker](xref:Avalonia.Controls.CalendarDatePicker).
- [CalendarDateRange](calendardaterange.mdx)
- [CalendarMode](calendarmode.mdx) - Specifies values for the different modes of operation of a
[Avalonia.Controls.Calendar](xref:Avalonia.Controls.Calendar).
- [CalendarModeChangedEventArgs](calendarmodechangedeventargs.mdx) - Provides data for the
[Avalonia.Controls.Calendar.DisplayModeChanged](xref:Avalonia.Controls.Calendar.DisplayModeChanged)
event.
- [CalendarSelectionMode](calendarselectionmode.mdx) - Specifies values that describe the available selection modes for a
[Avalonia.Controls.Calendar](xref:Avalonia.Controls.Calendar).
- [Canvas](canvas.mdx) - A panel that displays child controls at arbitrary locations.
- [Carousel](carousel.mdx) - An items control that displays its items as pages and can reveal adjacent pages
using [Avalonia.Controls.Carousel.ViewportFraction](xref:Avalonia.Controls.Carousel.ViewportFraction).
- [CarouselPage](carouselpage.mdx) - A page that displays its child pages in a horizontally scrollable carousel,
with optional animated page transitions.
- [CellIndex](cellindex.mdx) - Represents a cell in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [CellRenderer](cellrenderer.mdx) - Base class for cell renderers that draw cell content directly without creating per-cell controls.
- [CheckBox](checkbox.mdx) - A check box control.
- [CheckBoxColumnCreateOptions](checkboxcolumncreateoptions.mdx) - Holds options for configuring a [Avalonia.Controls.TreeDataGridCheckBoxColumn](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn) via the fluent API.
- [Classes](classes.mdx) - Holds a collection of style classes for an [Avalonia.StyledElement](xref:Avalonia.StyledElement).
- [ClickMode](clickmode.mdx) - Defines how a [Avalonia.Controls.Button](xref:Avalonia.Controls.Button) reacts to clicks.
- [CodeHighlighter](codehighlighter.mdx) - Abstract base class for code syntax highlighters used by [Avalonia.Controls.Documents.MarkdownCodeBlock](xref:Avalonia.Controls.Documents.MarkdownCodeBlock).
- [ColorChangedEventArgs](colorchangedeventargs.mdx) - Holds the details of a ColorChanged event.
- [ColorComponent](colorcomponent.mdx) - Defines a specific component within a color model.
- [ColorModel](colormodel.mdx) - Defines the model used to represent colors.
- [ColorPicker](colorpicker.mdx) - Presents a color for user editing using a spectrum, palette and component sliders within a drop down.
Editing is available when the drop down flyout is opened; otherwise, only the preview content area is shown.
- [ColorSpectrumComponents](colorspectrumcomponents.mdx) - Defines the two HSV color components displayed by a [Avalonia.Controls.Primitives.ColorSpectrum](xref:Avalonia.Controls.Primitives.ColorSpectrum).
- [ColorSpectrumShape](colorspectrumshape.mdx) - Defines the shape of a [Avalonia.Controls.Primitives.ColorSpectrum](xref:Avalonia.Controls.Primitives.ColorSpectrum).
- [ColorView](colorview.mdx) - Presents a color for user editing using a spectrum, palette and component sliders.
- [ColorViewTab](colorviewtab.mdx) - Defines a specific tab/page (subview) within the [Avalonia.Controls.ColorView](xref:Avalonia.Controls.ColorView).
- [ColumnCreateOptions](columncreateoptions.mdx) - Holds options for configuring a [Avalonia.Controls.TreeDataGridColumn](xref:Avalonia.Controls.TreeDataGridColumn) via the fluent API.
- [ColumnDefinition](columndefinition.mdx) - Holds a column definitions for a [Avalonia.Controls.Grid](xref:Avalonia.Controls.Grid).
- [ColumnDefinitions](columndefinitions.mdx) - A collection of [Avalonia.Controls.ColumnDefinition](xref:Avalonia.Controls.ColumnDefinition)s.
- [ComboBox](combobox.mdx) - A drop-down list control.
- [ComboBoxItem](comboboxitem.mdx) - A selectable item in a [Avalonia.Controls.ComboBox](xref:Avalonia.Controls.ComboBox).
- [CommandBar](commandbar.mdx) - A command bar that provides primary commands displayed inline and secondary commands
accessible via an overflow menu.
- [CommandBarButton](commandbarbutton.mdx) - A button for use in a [Avalonia.Controls.CommandBar](xref:Avalonia.Controls.CommandBar).
- [CommandBarDefaultLabelPosition](commandbardefaultlabelposition.mdx) - Defines how labels are positioned for command bar buttons.
- [CommandBarOverflowButtonVisibility](commandbaroverflowbuttonvisibility.mdx) - Defines the visibility of the overflow button in a [Avalonia.Controls.CommandBar](xref:Avalonia.Controls.CommandBar).
- [CommandBarSeparator](commandbarseparator.mdx) - A visual separator for use in a [Avalonia.Controls.CommandBar](xref:Avalonia.Controls.CommandBar).
- [CommandBarToggleButton](commandbartogglebutton.mdx) - A toggle button for use in a [Avalonia.Controls.CommandBar](xref:Avalonia.Controls.CommandBar).
- [ContainerClearingEventArgs](containerclearingeventargs.mdx) - Provides data for the [Avalonia.Controls.ItemsControl.ContainerClearing](xref:Avalonia.Controls.ItemsControl.ContainerClearing) event.
- [ContainerIndexChangedEventArgs](containerindexchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.ItemsControl.ContainerIndexChanged](xref:Avalonia.Controls.ItemsControl.ContainerIndexChanged) event.
- [ContainerPreparedEventArgs](containerpreparedeventargs.mdx) - Provides data for the [Avalonia.Controls.ItemsControl.ContainerPrepared](xref:Avalonia.Controls.ItemsControl.ContainerPrepared) event.
- [ContentControl](contentcontrol.mdx) - Displays [Avalonia.Controls.ContentControl.Content](xref:Avalonia.Controls.ContentControl.Content) according to an [Avalonia.Controls.Templates.IDataTemplate](xref:Avalonia.Controls.Templates.IDataTemplate).
- [ContentPage](contentpage.mdx) - A page that displays a single piece of content with optional top and bottom command bars.
- [ContextMenu](contextmenu.mdx) - A control context menu.
- [Control](control.mdx) - Base class for Avalonia controls.
- [ControlExtensions](controlextensions.mdx) - Adds common functionality to [Avalonia.Controls.Control](xref:Avalonia.Controls.Control).
- [Controls](controls.mdx) - A collection of [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)s.
- [DataValidationErrors](datavalidationerrors.mdx) - A control which displays an error notifier when there is a DataValidationError.
Provides attached properties to track errors on a control
- [DatePicker](datepicker.mdx) - A control to allow the user to select a date
- [DatePickerPresenter](datepickerpresenter.mdx) - Defines the presenter used for selecting a date for a
[Avalonia.Controls.DatePicker](xref:Avalonia.Controls.DatePicker)
- [DatePickerSelectedValueChangedEventArgs](datepickerselectedvaluechangedeventargs.mdx) - Defines the argument passed when the [Avalonia.Controls.DatePicker](xref:Avalonia.Controls.DatePicker) SelectedDate changes
- [Decorator](decorator.mdx) - Base class for controls which decorate a single child control.
- [DeferralManager.Deferral](deferralmanager-deferral.mdx)
- [DefinitionBase](definitionbase.mdx) - [DefinitionBase](xref:Avalonia.Controls.DefinitionBase) provides core functionality used internally by Grid
and ColumnDefinitionCollection / RowDefinitionCollection
- [DefinitionList&lt;T&gt;](definitionlist-1.mdx)
- [Design](design.mdx) - Provides attached properties and helpers for design-time support.
- [DesktopApplicationExtensions](desktopapplicationextensions.mdx)
- [Dock](dock.mdx) - Defines the available docking modes for a control in a [Avalonia.Controls.DockPanel](xref:Avalonia.Controls.DockPanel).
- [DockPanel](dockpanel.mdx) - A panel which arranges its children at the top, bottom, left, right or center.
- [DrawerBehavior](drawerbehavior.mdx) - Defines the behavior of the drawer pane.
- [DrawerClosingEventArgs](drawerclosingeventargs.mdx) - Provides data for the [Avalonia.Controls.DrawerPage.ClosingEvent](xref:Avalonia.Controls.DrawerPage.ClosingEvent) routed event.
- [DrawerLayoutBehavior](drawerlayoutbehavior.mdx) - Defines the layout behavior of the drawer page.
- [DrawerPage](drawerpage.mdx) - A page that provides a drawer pattern.
- [DrawerPlacement](drawerplacement.mdx) - Defines which edge of the [Avalonia.Controls.DrawerPage](xref:Avalonia.Controls.DrawerPage) the drawer pane slides in from.
- [DropDownButton](dropdownbutton.mdx) - A button with an added drop-down chevron to visually indicate it has a flyout with additional actions.
- [ExpandDirection](expanddirection.mdx) - Direction in which an [Avalonia.Controls.Expander](xref:Avalonia.Controls.Expander) control opens.
- [Expander](expander.mdx) - A control with a header that has a collapsible content section.
- [ExperimentalAcrylicBorder](experimentalacrylicborder.mdx)
- [FlatColorPalette](flatcolorpalette.mdx) - Implements a reduced flat design or flat UI color palette.
- [FlatColorPalette.FlatColor](flatcolorpalette-flatcolor.mdx) - Defines all colors in the [Avalonia.Controls.FlatColorPalette](xref:Avalonia.Controls.FlatColorPalette).
- [FlatHalfColorPalette](flathalfcolorpalette.mdx) - Implements half of the [Avalonia.Controls.FlatColorPalette](xref:Avalonia.Controls.FlatColorPalette) for improved usability.
- [FlatTreeDataGridSource&lt;TModel&gt;](flattreedatagridsource-1.mdx) - A data source for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) which displays a flat grid.
- [FluentColorPalette](fluentcolorpalette.mdx) - Implements the standard Windows 10 color palette.
- [Flyout](flyout.mdx)
- [FlyoutPresenter](flyoutpresenter.mdx)
- [FlyoutShowMode](flyoutshowmode.mdx)
- [Grid](grid.mdx) - Defines a flexible grid area that consists of columns and rows.
- [GridLength](gridlength.mdx) - Holds the width or height of a [Avalonia.Controls.Grid](xref:Avalonia.Controls.Grid)'s column and row definitions.
- [GridResizeBehavior](gridresizebehavior.mdx) - Enum to indicate what Columns or Rows the [Avalonia.Controls.GridSplitter](xref:Avalonia.Controls.GridSplitter) resizes.
- [GridResizeDirection](gridresizedirection.mdx) - Enum to indicate whether [Avalonia.Controls.GridSplitter](xref:Avalonia.Controls.GridSplitter) resizes Columns or Rows.
- [GridSplitter](gridsplitter.mdx) - Represents the control that redistributes space between columns or rows of a [Avalonia.Controls.Grid](xref:Avalonia.Controls.Grid) control.
- [GridUnitType](gridunittype.mdx) - Defines the valid units for a [Avalonia.Controls.GridLength](xref:Avalonia.Controls.GridLength).
- [GroupBox](groupbox.mdx)
- [HierarchicalExpanderColumnCreateOptions&lt;TModel&gt;](hierarchicalexpandercolumncreateoptions-1.mdx) - Holds options for a hierarchical expander column created via
[Avalonia.Controls.TreeDataGridSourceExtensions.WithHierarchicalExpanderColumn&lt;T&gt;(Avalonia.Controls.HierarchicalTreeDataGridSource&#123;&lt;&gt;&#125;,object,Avalonia.Controls.TreeDataGridColumn,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,System.Collections.Generic.IEnumerable&#123;&lt;&gt;&#125;&#125;&#125;,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,bool&#125;&#125;,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,bool&#125;&#125;,Action&#123;Avalonia.Controls.HierarchicalExpanderColumnCreateOptions&#123;&lt;&gt;&#125;&#125;)](xref:Avalonia.Controls.TreeDataGridSourceExtensions.WithHierarchicalExpanderColumn%60%601%28Avalonia.Controls.HierarchicalTreeDataGridSource%7B%60%600%7D%2CSystem.Object%2CAvalonia.Controls.TreeDataGridColumn%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Collections.Generic.IEnumerable%7B%60%600%7D%7D%7D%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Boolean%7D%7D%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Boolean%7D%7D%2CSystem.Action%7BAvalonia.Controls.HierarchicalExpanderColumnCreateOptions%7B%60%600%7D%7D%29).
- [HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt;](hierarchicalexpandertextcolumncreateoptions-1.mdx) - Holds options for a hierarchical expander column with an inner text column created via
the WithHierarchicalExpanderTextColumn extension methods on [Avalonia.Controls.TreeDataGridSourceExtensions](xref:Avalonia.Controls.TreeDataGridSourceExtensions).
- [HierarchicalTreeDataGridSource&lt;TModel&gt;](hierarchicaltreedatagridsource-1.mdx) - A data source for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) which displays a hierarchial tree where each
row may have multiple columns.
- [HotKeyManager](hotkeymanager.mdx)
- [HsvComponent](hsvcomponent.mdx) - Defines a specific component in the HSV color model.
- [HyperlinkButton](hyperlinkbutton.mdx) - A button control that functions as a navigateable hyperlink.
- [IColorPalette](icolorpalette.mdx) - Interface to define a color palette.
- [ICommandBarElement](icommandbarelement.mdx) - Interface implemented by all command bar elements.
- [IDeferredContent](ideferredcontent.mdx) - Represents a deferred content.
- [IGlobalDataTemplates](iglobaldatatemplates.mdx) - Defines the application-global data templates.
- [INameScope](inamescope.mdx) - Defines a name scope.
- [INativeMenuExporterEventsImplBridge](inativemenuexportereventsimplbridge.mdx)
- [INativeMenuItemExporterEventsImplBridge](inativemenuitemexportereventsimplbridge.mdx)
- [INavigation](inavigation.mdx) - Provides navigation operations for stack-based and modal page navigation.
Exposed via [Avalonia.Controls.Page.Navigation](xref:Avalonia.Controls.Page.Navigation) when a page is hosted in a [NavigationPage](xref:Avalonia.Controls.NavigationPage).
- [IPseudoClasses](ipseudoclasses.mdx) - Exposes an interface for setting pseudoclasses on a [Avalonia.Controls.Classes](xref:Avalonia.Controls.Classes) collection.
- [IResourceDictionary](iresourcedictionary.mdx) - An indexed dictionary of resources.
- [IResourceHost](iresourcehost.mdx) - Represents an element which hosts resources.
- [IResourceNode](iresourcenode.mdx) - Represents an object that can be queried for resources.
- [IResourceProvider](iresourceprovider.mdx) - Represents an object that can be queried for resources but does not appear in the logical tree.
- [IScrollAnchorProvider](iscrollanchorprovider.mdx) - Specifies a contract for a scrolling control that supports scroll anchoring.
- [ISelectable](iselectable.mdx) - An interface that is implemented by objects that expose their selection state via a
boolean [Avalonia.Controls.ISelectable.IsSelected](xref:Avalonia.Controls.ISelectable.IsSelected) property.
- [ISetInheritanceParent](isetinheritanceparent.mdx) - Defines an interface through which a [Avalonia.StyledElement](xref:Avalonia.StyledElement)'s inheritance parent can be set.
- [ISetLogicalParent](isetlogicalparent.mdx) - Defines an interface through which a [Avalonia.StyledElement](xref:Avalonia.StyledElement)'s logical parent can be set.
- [ITemplate&lt;TControl&gt;](itemplate-1.mdx) - Creates a control.
- [IThemeVariantProvider](ithemevariantprovider.mdx) - Resource provider with theme variant awareness.
Can be used with [Avalonia.Controls.IResourceDictionary.ThemeDictionaries](xref:Avalonia.Controls.IResourceDictionary.ThemeDictionaries).
- [IWebViewAdapterWithFocus.LostFocusDirection](iwebviewadapterwithfocus-lostfocusdirection.mdx)
- [IconElement](iconelement.mdx)
- [Image](image.mdx) - Displays a [Avalonia.Media.Imaging.Bitmap](xref:Avalonia.Media.Imaging.Bitmap) image.
- [IndexPath](indexpath.mdx) - Represents a path of indexes used to identify a specific item in a hierarchical data
structure. Each index in the path represents a level of depth in the hierarchy.
- [ItemCollection](itemcollection.mdx) - Holds the list of items that constitute the content of an [Avalonia.Controls.ItemsControl](xref:Avalonia.Controls.ItemsControl).
- [ItemsControl](itemscontrol.mdx) - Displays a collection of items.
- [ItemsSourceView](itemssourceview.mdx) - Represents a standardized view of the supported interactions between an items collection
and an items control.
- [ItemsSourceView&lt;T&gt;](itemssourceview-1.mdx)
- [Label](label.mdx) - Label control. Focuses [Avalonia.Controls.Label.Target](xref:Avalonia.Controls.Label.Target) on pointer click or access key press (Alt + accessKey)
- [LayoutTransformControl](layouttransformcontrol.mdx) - Control that implements support for transformations as if applied by LayoutTransform.
- [ListBox](listbox.mdx) - An [Avalonia.Controls.ItemsControl](xref:Avalonia.Controls.ItemsControl) in which individual items can be selected.
- [ListBoxItem](listboxitem.mdx) - A selectable item in a [Avalonia.Controls.ListBox](xref:Avalonia.Controls.ListBox).
- [Location](location.mdx)
- [MacOSProperties](macosproperties.mdx) - Set of MacOS specific attached properties that allow deeper customization of the application per platform.
- [Markdown](markdown.mdx) - Displays markdown text with read-only selection support.
- [MarkdownExtensions](markdownextensions.mdx) - Extension methods for configuring Markdig pipelines for the [Avalonia.Controls.Markdown](xref:Avalonia.Controls.Markdown) control.
- [MarkdownImageLoader](markdownimageloader.mdx) - An interface used to resolve images in the markdown.
- [MarkdownStreamingSession](markdownstreamingsession.mdx) - Manages an active markdown streaming session. Text is appended via
[Avalonia.Controls.MarkdownStreamingSession.Append(string)](xref:Avalonia.Controls.MarkdownStreamingSession.Append%28System.String%29) and coalesced into periodic render updates
at display refresh rate to avoid redundant work.
- [MaskedTextBox](maskedtextbox.mdx)
- [MaterialColorPalette](materialcolorpalette.mdx) - Implements a reduced version of the 2014 Material Design color palette.
- [MaterialColorPalette.MaterialColor](materialcolorpalette-materialcolor.mdx) - Defines all colors in the [Avalonia.Controls.MaterialColorPalette](xref:Avalonia.Controls.MaterialColorPalette).
- [MaterialHalfColorPalette](materialhalfcolorpalette.mdx) - Implements half of the [Avalonia.Controls.MaterialColorPalette](xref:Avalonia.Controls.MaterialColorPalette) for improved usability.
- [MediaPlayerControl](mediaplayercontrol.mdx)
- [MediaPlayerControlErrorEventArgs](mediaplayercontrolerroreventargs.mdx)
- [MediaPlayerPresenter](mediaplayerpresenter.mdx)
- [Menu](menu.mdx) - A top-level menu control.
- [MenuBase](menubase.mdx) - Base class for menu controls.
- [MenuFlyout](menuflyout.mdx)
- [MenuFlyoutPresenter](menuflyoutpresenter.mdx)
- [MenuItem](menuitem.mdx) - A menu item control.
- [MenuItemToggleType](menuitemtoggletype.mdx) - Defines how a [Avalonia.Controls.MenuItem](xref:Avalonia.Controls.MenuItem) or [Avalonia.Controls.NativeMenuItem](xref:Avalonia.Controls.NativeMenuItem) reacts to clicks.
- [ModalPoppedEventArgs](modalpoppedeventargs.mdx) - Provides data for the [Avalonia.Controls.NavigationPage.ModalPopped](xref:Avalonia.Controls.NavigationPage.ModalPopped) event.
- [ModalPushedEventArgs](modalpushedeventargs.mdx) - Provides data for the [Avalonia.Controls.NavigationPage.ModalPushed](xref:Avalonia.Controls.NavigationPage.ModalPushed) event.
- [MultiPage](multipage.mdx) - Abstract base class for pages that host a collection of child pages.
- [NameScope](namescope.mdx) - Implements a name scope.
- [NameScopeExtensions](namescopeextensions.mdx) - Extension methods for [Avalonia.Controls.INameScope](xref:Avalonia.Controls.INameScope).
- [NameScopeLocator](namescopelocator.mdx)
- [NativeControlHost](nativecontrolhost.mdx)
- [NativeDock](nativedock.mdx) - Allows native menu support on platforms where a [Avalonia.Controls.NativeMenu](xref:Avalonia.Controls.NativeMenu) can be attached to the dock.
- [NativeMenu](nativemenu.mdx)
- [NativeMenuBar](nativemenubar.mdx)
- [NativeMenuItem](nativemenuitem.mdx)
- [NativeMenuItemBase](nativemenuitembase.mdx)
- [NativeMenuItemSeparator](nativemenuitemseparator.mdx)
- [NativeWebDialog](nativewebdialog.mdx)
- [NativeWebView](nativewebview.mdx)
- [NativeWebViewCommandManager](nativewebviewcommandmanager.mdx)
- [NativeWebViewCookieManager](nativewebviewcookiemanager.mdx)
- [NavigatedFromEventArgs](navigatedfromeventargs.mdx) - Provides data for the [Avalonia.Controls.Page.NavigatedFrom](xref:Avalonia.Controls.Page.NavigatedFrom) event.
- [NavigatedToEventArgs](navigatedtoeventargs.mdx) - Provides data for the [Avalonia.Controls.Page.NavigatedTo](xref:Avalonia.Controls.Page.NavigatedTo) event.
- [NavigatingFromEventArgs](navigatingfromeventargs.mdx) - Provides data for the [Avalonia.Controls.Page.Navigating](xref:Avalonia.Controls.Page.Navigating) event.
- [NavigationEventArgs](navigationeventargs.mdx) - Provides data for [Avalonia.Controls.NavigationPage](xref:Avalonia.Controls.NavigationPage) push and pop events.
- [NavigationPage](navigationpage.mdx) - A navigation page that supports simple stack-based navigation.
- [NavigationType](navigationtype.mdx) - Specifies the type of navigation that occurred.
- [NumericUpDown](numericupdown.mdx) - Control that represents a [TextBox](xref:Avalonia.Controls.TextBox) with button spinners that allow incrementing and decrementing numeric values.
- [NumericUpDownValueChangedEventArgs](numericupdownvaluechangedeventargs.mdx)
- [Page](page.mdx) - Abstract base class for all page types.
- [PageInsertedEventArgs](pageinsertedeventargs.mdx) - Provides data for the [Avalonia.Controls.NavigationPage.PageInserted](xref:Avalonia.Controls.NavigationPage.PageInserted) event.
- [PageNavigationHost](pagenavigationhost.mdx) - A content control that hosts a root [Avalonia.Controls.PageNavigationHost.Page](xref:Avalonia.Controls.PageNavigationHost.Page), wires up safe-area insets,
and forwards the system back-button event into the page tree.
- [PageRemovedEventArgs](pageremovedeventargs.mdx) - Provides data for the [Avalonia.Controls.NavigationPage.PageRemoved](xref:Avalonia.Controls.NavigationPage.PageRemoved) event.
- [PageSelectionChangedEventArgs](pageselectionchangedeventargs.mdx) - Provides data for a page selection-changed event.
- [Panel](panel.mdx) - Base class for controls that can contain multiple children.
- [PathIcon](pathicon.mdx)
- [PipsPager](pipspager.mdx) - Represents a control that lets the user navigate through a paginated collection using a set of pips.
- [PipsPagerSelectedIndexChangedEventArgs](pipspagerselectedindexchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.PipsPager.SelectedIndexChanged](xref:Avalonia.Controls.PipsPager.SelectedIndexChanged) event.
- [PixelPointEventArgs](pixelpointeventargs.mdx) - Provides [Avalonia.PixelPoint](xref:Avalonia.PixelPoint) data for events.
- [PlacementMode](placementmode.mdx) - Defines the placement for a [Avalonia.Controls.Primitives.Popup](xref:Avalonia.Controls.Primitives.Popup) control.
- [PlatformInhibitionType](platforminhibitiontype.mdx) - A platform specific behavior that can be inhibited.
- [PopulatedEventArgs](populatedeventargs.mdx) - Provides data for the
[Avalonia.Controls.AutoCompleteBox.Populated](xref:Avalonia.Controls.AutoCompleteBox.Populated)
event.
- [PopulatingEventArgs](populatingeventargs.mdx) - Provides data for the
[Avalonia.Controls.AutoCompleteBox.Populating](xref:Avalonia.Controls.AutoCompleteBox.Populating)
event.
- [ProgressBar](progressbar.mdx) - A control used to indicate the progress of an operation.
- [ProgressBar.ProgressBarTemplateSettings](progressbar-progressbartemplatesettings.mdx) - Provides calculated values for use with the [Avalonia.Controls.ProgressBar](xref:Avalonia.Controls.ProgressBar)'s control theme or template.
- [PseudoClassesExtensions](pseudoclassesextensions.mdx)
- [RadioButton](radiobutton.mdx) - Represents a button that allows a user to select a single option from a group of options.
- [RefreshCompletionDeferral](refreshcompletiondeferral.mdx) - Deferral class for notify that a work done in RefreshRequested event is done.
- [RefreshContainer](refreshcontainer.mdx) - Represents a container control that provides a [Avalonia.Controls.RefreshVisualizer](xref:Avalonia.Controls.RefreshVisualizer) and pull-to-refresh functionality for scrollable content.
- [RefreshRequestedEventArgs](refreshrequestedeventargs.mdx) - Provides event data for RefreshRequested events.
- [RefreshVisualizer](refreshvisualizer.mdx)
- [RefreshVisualizerOrientation](refreshvisualizerorientation.mdx) - Defines constants that specify the orientation of a [RefreshVisualizer](xref:Avalonia.Controls.RefreshVisualizer).
- [RefreshVisualizerState](refreshvisualizerstate.mdx) - Defines constants that specify the state of a [RefreshVisualizer](xref:Avalonia.Controls.RefreshVisualizer)
- [RelativePanel](relativepanel.mdx) - Defines an area within which you can position and align child objects in relation to each other or the parent panel.
- [RepeatButton](repeatbutton.mdx) - Represents a control that raises its [Avalonia.Controls.Button.Click](xref:Avalonia.Controls.Button.Click) event repeatedly when it is pressed and held.
- [RequestBringIntoViewEventArgs](requestbringintovieweventargs.mdx)
- [ResolveByNameAttribute](resolvebynameattribute.mdx) - Indicates that the property resolves an element by Name or x:Name.
When applying this to attached properties, ensure to put on both
the Getter and Setter methods.
- [ResourceDictionary](resourcedictionary.mdx) - An indexed dictionary of resources.
- [ResourceNodeExtensions](resourcenodeextensions.mdx)
- [ResourceProvider](resourceprovider.mdx) - Base implementation for [IResourceProvider](xref:Avalonia.Controls.IResourceProvider) interface.
Includes Owner property management.
- [ResourcesChangedEventArgs](resourceschangedeventargs.mdx) - Represents the event arguments of [Avalonia.Controls.IResourceHost.ResourcesChanged](xref:Avalonia.Controls.IResourceHost.ResourcesChanged).
The [Avalonia.Controls.ResourcesChangedEventArgs.SequenceNumber](xref:Avalonia.Controls.ResourcesChangedEventArgs.SequenceNumber) identifies the changes.
- [ReversibleStackPanel](reversiblestackpanel.mdx) - Implements a [Avalonia.Controls.StackPanel](xref:Avalonia.Controls.StackPanel) where the flow direction of its items can be reversed.
- [RgbComponent](rgbcomponent.mdx) - Defines a specific component in the RGB color model.
- [RichTextEditor](richtexteditor.mdx) - A rich text editor control that provides interactive editing capabilities for FlowDocument content.
- [RowDefinition](rowdefinition.mdx) - Holds a row definitions for a [Avalonia.Controls.Grid](xref:Avalonia.Controls.Grid).
- [RowDefinitions](rowdefinitions.mdx) - A collection of [Avalonia.Controls.RowDefinition](xref:Avalonia.Controls.RowDefinition)s.
- [Screens](screens.mdx) - Represents all screens available on a device.
- [ScrollChangedEventArgs](scrollchangedeventargs.mdx) - Describes a change in scrolling state.
- [ScrollViewer](scrollviewer.mdx) - A control which scrolls its content if the content is bigger than the space available.
- [SelectableTextBlock](selectabletextblock.mdx) - A control that displays a block of formatted text.
- [SelectingMultiPage](selectingmultipage.mdx) - Base class for multi-page controls with index-based selection.
- [SelectionChangedEventArgs](selectionchangedeventargs.mdx) - Provides data for the [Avalonia.Controls.Primitives.SelectingItemsControl.SelectionChanged](xref:Avalonia.Controls.Primitives.SelectingItemsControl.SelectionChanged) event.
- [SelectionMode](selectionmode.mdx) - Defines the selection mode for a control which can select multiple items.
- [Separator](separator.mdx) - A separator control.
- [ShutdownMode](shutdownmode.mdx) - Describes the possible values for [Avalonia.Controls.ApplicationLifetimes.IClassicDesktopStyleApplicationLifetime.ShutdownMode](xref:Avalonia.Controls.ApplicationLifetimes.IClassicDesktopStyleApplicationLifetime.ShutdownMode).
- [SixteenColorPalette](sixteencolorpalette.mdx) - Implements the standard sixteen color palette from the HTML 4.01 specification.
- [SizeChangedEventArgs](sizechangedeventargs.mdx) - Provides data specific to a SizeChanged event.
- [SizeToContent](sizetocontent.mdx) - Determines how a [Avalonia.Controls.Window](xref:Avalonia.Controls.Window) will size itself to fit its content.
- [Slider](slider.mdx) - A control that lets the user select from a range of values by moving a Thumb control along a Track.
- [SpinDirection](spindirection.mdx) - Represents spin directions that could be initiated by the end-user.
- [SpinEventArgs](spineventargs.mdx) - Provides data for the Spinner.Spin event.
- [Spinner](spinner.mdx) - Base class for controls that represents controls that can spin.
- [SplitButton](splitbutton.mdx) - A button with primary and secondary parts that can each be pressed separately.
The primary part behaves like a [Avalonia.Controls.Button](xref:Avalonia.Controls.Button) and the secondary part opens a flyout.
- [SplitView](splitview.mdx) - A control with two views: A collapsible pane and an area for content
- [SplitViewDisplayMode](splitviewdisplaymode.mdx) - Defines constants for how the [SplitView](xref:Avalonia.Controls.SplitView) Pane should display
- [SplitViewPanePlacement](splitviewpaneplacement.mdx) - Defines constants for where the Pane should appear
- [StackPanel](stackpanel.mdx) - A panel which lays out its children horizontally or vertically.
- [TabControl](tabcontrol.mdx) - A tab control that displays a tab strip along with the content of the selected tab.
- [TabItem](tabitem.mdx) - An item in a [Avalonia.Controls.TabControl](xref:Avalonia.Controls.TabControl).
- [TabPlacement](tabplacement.mdx) - Specifies the position of the tab strip within a [Avalonia.Controls.TabbedPage](xref:Avalonia.Controls.TabbedPage) layout.
- [TabbedPage](tabbedpage.mdx) - A page that displays its child pages through a tab strip.
- [TemplateColumnCreateOptions](templatecolumncreateoptions.mdx) - Holds options for configuring a [Avalonia.Controls.TreeDataGridTemplateColumn](xref:Avalonia.Controls.TreeDataGridTemplateColumn) via the fluent API.
- [TextBlock](textblock.mdx) - A control that displays a block of text.
- [TextBox](textbox.mdx) - Represents a control that can be used to display or edit unformatted text.
- [TextChangedEventArgs](textchangedeventargs.mdx) - Provides data specific to a [Avalonia.Controls.TextBox.TextChanged](xref:Avalonia.Controls.TextBox.TextChanged) event.
- [TextChangingEventArgs](textchangingeventargs.mdx) - Provides data specific to a [Avalonia.Controls.TextBox.TextChanging](xref:Avalonia.Controls.TextBox.TextChanging) event.
- [TextColumnCreateOptions](textcolumncreateoptions.mdx) - Holds options for configuring a [Avalonia.Controls.TreeDataGridTextColumn](xref:Avalonia.Controls.TreeDataGridTextColumn) via the fluent API.
- [ThemeVariantScope](themevariantscope.mdx) - Decorator control that isolates controls subtree with locally defined [Avalonia.Styling.ThemeVariant](xref:Avalonia.Styling.ThemeVariant).
- [TickBar](tickbar.mdx) - An element that is used for drawing [Avalonia.Controls.Slider](xref:Avalonia.Controls.Slider)'s Ticks.
- [TickBarPlacement](tickbarplacement.mdx) - Enum which describes how to position the [TickBar](xref:Avalonia.Controls.TickBar).
- [TickPlacement](tickplacement.mdx) - Enum which describes how to position the ticks in a [Avalonia.Controls.Slider](xref:Avalonia.Controls.Slider).
- [TimePicker](timepicker.mdx) - A control to allow the user to select a time.
- [TimePickerPresenter](timepickerpresenter.mdx) - Defines the presenter used for selecting a time. Intended for use with
[Avalonia.Controls.TimePicker](xref:Avalonia.Controls.TimePicker) but can be used independently
- [TimePickerSelectedValueChangedEventArgs](timepickerselectedvaluechangedeventargs.mdx)
- [ToggleSplitButton](togglesplitbutton.mdx) - A button with primary and secondary parts that can each be pressed separately.
The primary part behaves like a [Avalonia.Controls.Primitives.ToggleButton](xref:Avalonia.Controls.Primitives.ToggleButton) with two states and
the secondary part opens a flyout.
- [ToggleSwitch](toggleswitch.mdx) - A Toggle Switch control.
- [ToolTip](tooltip.mdx) - A control which pops up a hint when a control is hovered.
- [TopLevel](toplevel.mdx) - Base class for top-level widgets.
- [TransitionCompletedEventArgs](transitioncompletedeventargs.mdx) - Represents the event arguments for [Avalonia.Controls.TransitioningContentControl.TransitionCompletedEvent](xref:Avalonia.Controls.TransitioningContentControl.TransitionCompletedEvent).
- [TransitioningContentControl](transitioningcontentcontrol.mdx) - Displays [Avalonia.Controls.ContentControl.Content](xref:Avalonia.Controls.ContentControl.Content) according to an [Avalonia.Controls.Templates.IDataTemplate](xref:Avalonia.Controls.Templates.IDataTemplate),
using a [Avalonia.Controls.TransitioningContentControl.PageTransition](xref:Avalonia.Controls.TransitioningContentControl.PageTransition) to move between the old and new content.
- [TrayIcon](trayicon.mdx)
- [TrayIcons](trayicons.mdx)
- [TreeDataGrid](treedatagrid.mdx) - Represents a control that displays hierarchical and tabular data together in a single view.
It is a combination of a [TreeView](xref:Avalonia.Controls.TreeView) and DataGrid control.
- [TreeDataGridBoundColumn](treedatagridboundcolumn.mdx) - Base class for columns which select cell values from a model using a binding.
- [TreeDataGridCellEventArgs](treedatagridcelleventargs.mdx) - Provides data for events related to cell operations in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid)
control.
- [TreeDataGridCheckBoxColumn](treedatagridcheckboxcolumn.mdx) - A column in an [Avalonia.Controls.TreeDataGridSource](xref:Avalonia.Controls.TreeDataGridSource) which displays a check box.
- [TreeDataGridColumn](treedatagridcolumn.mdx) - Base class for columns in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [TreeDataGridColumns](treedatagridcolumns.mdx) - Represents a collection of columns in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [TreeDataGridHierarchicalExpanderColumn](treedatagridhierarchicalexpandercolumn.mdx) - A column in an [Avalonia.Controls.HierarchicalTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.HierarchicalTreeDataGridSource%601) whose cells show an
expander to reveal nested data.
- [TreeDataGridRowDragEventArgs](treedatagridrowdrageventargs.mdx) - Provides data for the [Avalonia.Controls.TreeDataGrid.RowDragOver](xref:Avalonia.Controls.TreeDataGrid.RowDragOver) and
[Avalonia.Controls.TreeDataGrid.RowDrop](xref:Avalonia.Controls.TreeDataGrid.RowDrop) events.
- [TreeDataGridRowDragStartedEventArgs](treedatagridrowdragstartedeventargs.mdx) - Provides data for the [Avalonia.Controls.TreeDataGrid.RowDragStarted](xref:Avalonia.Controls.TreeDataGrid.RowDragStarted) event.
- [TreeDataGridRowDropPosition](treedatagridrowdropposition.mdx) - Specifies the position where a dragged row should be dropped relative to the target row.
- [TreeDataGridRowEventArgs](treedatagridroweventargs.mdx) - Provides data for events related to row operations in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridRowHeaderColumn](treedatagridrowheadercolumn.mdx) - A column that displays visual row numbers (0, 1, 2...).
- [TreeDataGridRows](treedatagridrows.mdx) - Represents a collection of rows in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [TreeDataGridSelectionMode](treedatagridselectionmode.mdx) - Defines the selection mode for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).
- [TreeDataGridSource](treedatagridsource.mdx) - Represents a data source for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridSourceExtensions](treedatagridsourceextensions.mdx) - Provides fluent extension methods for adding columns to [Avalonia.Controls.FlatTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.FlatTreeDataGridSource%601)
and [Avalonia.Controls.HierarchicalTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.HierarchicalTreeDataGridSource%601) instances.
- [TreeDataGridSource&lt;TModel&gt;](treedatagridsource-1.mdx) - Represents a typed data source for a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) control.
- [TreeDataGridTemplateColumn](treedatagridtemplatecolumn.mdx) - A column in an [Avalonia.Controls.TreeDataGridSource](xref:Avalonia.Controls.TreeDataGridSource) which displays its values using a data
template.
- [TreeDataGridTextColumn](treedatagridtextcolumn.mdx) - A column in an [Avalonia.Controls.TreeDataGridSource](xref:Avalonia.Controls.TreeDataGridSource) which displays its values as text.
- [TreeView](treeview.mdx) - Displays a hierarchical tree of data.
- [TreeViewItem](treeviewitem.mdx) - An item in a [Avalonia.Controls.TreeView](xref:Avalonia.Controls.TreeView).
- [UserControl](usercontrol.mdx) - Provides the base class for defining a new control that encapsulates related existing controls and provides its own logic.
- [ValidSpinDirections](validspindirections.mdx) - Represents spin directions that are valid.
- [Viewbox](viewbox.mdx) - Viewbox is used to scale single child to fit in the available space.
- [VirtualKeyboard](virtualkeyboard.mdx) - This component is a standalone virtual keyboard that can be pointed at any input element regardless of the current
input focus
- [VirtualKeyboardAppBuilderExtensions](virtualkeyboardappbuilderextensions.mdx) - Provides extension methods for configuring virtual keyboard options in the Avalonia application builder.
- [VirtualKeyboardInputCandidate](virtualkeyboardinputcandidate.mdx) - Represents an input candidate suggestion from an Input Method Editor (IME), typically used for complex text input systems.
- [VirtualKeyboardInputMethod](virtualkeyboardinputmethod.mdx) - This class represents a particular input method which is usually a keyboard layout possibly combined
with an IME (Input Method Editor) engine for complex text input.
- [VirtualKeyboardOptions](virtualkeyboardoptions.mdx) - Configuration options for the virtual keyboard system.
- [VirtualKeyboardScope](virtualkeyboardscope.mdx) - This component wraps your UI into a special container that manages virtual keyboard visibility
based on the current input focus
- [VirtualizingCarouselPanel](virtualizingcarouselpanel.mdx) - A panel used by [Avalonia.Controls.Carousel](xref:Avalonia.Controls.Carousel) to display the current item.
- [VirtualizingPanel](virtualizingpanel.mdx) - Base class for panels that can be used to virtualize items for an [Avalonia.Controls.VirtualizingPanel.ItemsControl](xref:Avalonia.Controls.VirtualizingPanel.ItemsControl).
- [VirtualizingStackPanel](virtualizingstackpanel.mdx) - Arranges and virtualizes content on a single line that is oriented either horizontally or vertically.
- [WebAuthenticationBroker](webauthenticationbroker.mdx)
- [WebAuthenticationResult](webauthenticationresult.mdx)
- [WebAuthenticatorOptions](webauthenticatoroptions.mdx)
- [WebMessageReceivedEventArgs](webmessagereceivedeventargs.mdx)
- [WebResourceRequestedEventArgs](webresourcerequestedeventargs.mdx)
- [WebViewAdapter.AdapterFactory](webviewadapter-adapterfactory.mdx)
- [WebViewAdapter.AdapterWrapper](webviewadapter-adapterwrapper.mdx)
- [WebViewAdapter.CompositorHostAdapterFactory](webviewadapter-compositorhostadapterfactory.mdx)
- [WebViewAdapter.NativeHostAdapterFactory](webviewadapter-nativehostadapterfactory.mdx)
- [WebViewAdapter.NativeWebViewAdapterBuilder](webviewadapter-nativewebviewadapterbuilder.mdx)
- [WebViewAdapter.OffscreenWebViewAdapterBuilder](webviewadapter-offscreenwebviewadapterbuilder.mdx)
- [WebViewAdapterEventArgs](webviewadaptereventargs.mdx)
- [WebViewEnvironmentRequestedEventArgs](webviewenvironmentrequestedeventargs.mdx)
- [WebViewNavigationCompletedEventArgs](webviewnavigationcompletedeventargs.mdx)
- [WebViewNavigationEventArgs](webviewnavigationeventargs.mdx)
- [WebViewNavigationStartingEventArgs](webviewnavigationstartingeventargs.mdx)
- [WebViewNewWindowRequestedEventArgs](webviewnewwindowrequestedeventargs.mdx)
- [WebViewWebRequestHeaders](webviewwebrequestheaders.mdx)
- [WebViewWebResourceRequest](webviewwebresourcerequest.mdx)
- [Win32Properties](win32properties.mdx) - Set of Win32 specific properties and events that allow deeper customization of the application per platform.
- [Win32Properties.CustomWindowStylesCallback](win32properties-customwindowstylescallback.mdx)
- [Win32Properties.CustomWndProcHookCallback](win32properties-customwndprochookcallback.mdx)
- [Win32Properties.Win32HitTestValue](win32properties-win32hittestvalue.mdx)
- [Window](window.mdx) - A top-level window.
- [WindowBase](windowbase.mdx) - Base class for top-level windows.
- [WindowCloseReason](windowclosereason.mdx) - Specifies the reason that a window was closed.
- [WindowClosingBehavior](windowclosingbehavior.mdx) - Describes how the [Avalonia.Controls.Window.Closing](xref:Avalonia.Controls.Window.Closing) event behaves in the presence of child windows.
- [WindowClosingEventArgs](windowclosingeventargs.mdx) - Provides data for the [Avalonia.Controls.Window.Closing](xref:Avalonia.Controls.Window.Closing) event.
- [WindowDecorations](windowdecorations.mdx) - Determines window decorations (title bar, border, etc) for a [Avalonia.Controls.Window](xref:Avalonia.Controls.Window)
- [WindowEdge](windowedge.mdx)
- [WindowIcon](windowicon.mdx) - Represents an icon for a window.
- [WindowResizeReason](windowresizereason.mdx) - Describes the reason for a [Avalonia.Controls.WindowBase.Resized](xref:Avalonia.Controls.WindowBase.Resized) event.
- [WindowResizedEventArgs](windowresizedeventargs.mdx) - Provides data for the [Avalonia.Controls.WindowBase.Resized](xref:Avalonia.Controls.WindowBase.Resized) event.
- [WindowStartupLocation](windowstartuplocation.mdx) - Determines the startup location of the window.
- [WindowState](windowstate.mdx) - Defines the minimized/maximized state of a [Avalonia.Controls.Window](xref:Avalonia.Controls.Window).
- [WindowTransparencyLevel](windowtransparencylevel.mdx)
- [WindowTransparencyLevelCollection](windowtransparencylevelcollection.mdx)
- [WrapPanel](wrappanel.mdx) - Positions child elements in sequential position from left to right,
breaking content to the next line at the edge of the containing box.
Subsequent ordering happens sequentially from top to bottom or from right to left,
depending on the value of the [Avalonia.Controls.WrapPanel.Orientation](xref:Avalonia.Controls.WrapPanel.Orientation) property.
- [WrapPanelItemsAlignment](wrappanelitemsalignment.mdx)
- [X11Properties](x11properties.mdx) - Set of X11 specific properties and events that allow deeper customization of the application per platform.
</ApiRefPage>

